test/sema/increment-of-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

void foo(int* i) {
    // CHECK: [[@LINE+1]]:9: error: cannot increment immutable value of type 'int'
    (*i)++;
}
